tests/invalid/coerce_uniq.err_exp
coerce_uniq.m:024: In clause for `coerce_ui(ui, out)':
coerce_uniq.m:024:   mode error: argument 1 did not get sufficiently
coerce_uniq.m:024:   instantiated.
coerce_uniq.m:024:   Final instantiatedness of [38;5;87m`X'[39;49m was [38;5;203m`ground',[39;49m
coerce_uniq.m:024:   expected final instantiatedness was [38;5;40m`unique'.[39;49m
